<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Echo" >

    <LinearLayout
        android:id="@+id/llStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/lightRed"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:id="@+id/tvEnterServerIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/enter_server_ip"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/llIpAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etIpPart1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/ip_part_1"
                android:inputType="number"
                android:maxLength="3" >
            </EditText>

            <EditText
                android:id="@+id/etIpPart2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/ip_part_2"
                android:inputType="number"
                android:maxLength="3" >
            </EditText>

            <EditText
                android:id="@+id/etIpPart3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/ip_part_3"
                android:inputType="number"
                android:maxLength="3" >
            </EditText>

            <EditText
                android:id="@+id/etIpPart4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/ip_part_4"
                android:inputType="number"
                android:maxLength="3" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_shape"
                android:padding="10dp"
                android:text="@string/connect"
                android:textColor="@color/holoBlue"
                android:visibility="visible" >
            </Button>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@xml/progress"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnDisconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button_shape"
                android:padding="10dp"
                android:text="@string/disconnect"
                android:textColor="@color/holoRed"
                android:visibility="invisible" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

</LinearLayout>